--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <section id="projects">
         <h1>Projects</h1>
         <div class="projects-flex">
-        <a href="project-link" target="_blank">
+        <a href="/tribute-page/index.html" target="_blank">
           <div class="project project-tile">
             <img src="https://i.ibb.co/Yks4ZYX/tributepage1.png">
             <div class="bottom">
@@ -61,7 +61,7 @@
             </div>
           </div>
         </a>
-        <a href="project-link" target="_blank">
+        <a href="/todolist/index.html" target="_blank">
           <div class="project project-tile">
             <img src="https://i.ibb.co/HBhVKcr/todolist.png">
             <div class="bottom">
@@ -69,7 +69,7 @@
             </div>
           </div>
         </a>
-        <a href="project-link" target="_blank">
+        <a href="/yamasaki-shop/index.html" target="_blank">
           <div class="project project-tile">
             <img src="https://i.ibb.co/sqwcyX2/yamasaki2.png">
             <div class="bottom">
@@ -99,4 +99,3 @@
   </body>
   </html>
  
-  
