--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <main>
       <section id="welcome-section">
         <h1>hello!</h1>
-        <p class="middle">I’m Ondřej Gabrhelík {<span class = "blue">bubliman</span>} a website developer.</p>
+        <p class="middle">{name: 'Ondřej',<br> surname: 'Gabrhelík',<br> nickname: 'bubliman',<br> proffesion: 'website developer'}</p>
       </section>
       <section id="skills">
         <div class="skills">
