images + project links

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <main>
       <section id="welcome-section">
         <h1>hello!</h1>
-        <p class="middle">{name: 'Ondřej',<br> surname: 'Gabrhelík',<br> nickname: 'bubliman',<br> proffesion: 'website developer'}</p>
+        <p class="middle">info{<br>name: 'Ondřej',<br> surname: 'Gabrhelík',<br> nickname: 'bubliman',<br> work: 'website developer'<br>}</p>
       </section>
       <section id="skills">
         <div class="skills">
@@ -53,27 +53,27 @@
       <section id="projects">
         <h1>Projects</h1>
         <div class="projects-flex">
-        <a href="/tribute-page/index.html" target="_blank">
+        <a href="/graffiti-city" target="_blank">
           <div class="project project-tile">
-            <img src="https://i.ibb.co/Yks4ZYX/tributepage1.png">
+            <img src="graffiti-city1.png">
             <div class="bottom">
-              <h2>Tribute Page</h2>
+              <h2>Graffiti city site</h2>
             </div>
           </div>
         </a>
-        <a href="/todolist/index.html" target="_blank">
+        <a href="/todolist/" target="_blank">
           <div class="project project-tile">
-            <img src="https://i.ibb.co/HBhVKcr/todolist.png">
+            <img src="todolist.png">
             <div class="bottom">
               <h2>Todolist app</h2>
             </div>
           </div>
         </a>
-        <a href="/yamasaki-shop/index.html" target="_blank">
+        <a href="/yamasaki-shop/" target="_blank">
           <div class="project project-tile">
-            <img src="https://i.ibb.co/sqwcyX2/yamasaki2.png">
+            <img src="yamasaki2.png">
             <div class="bottom">
-              <h2>Shopping Page</h2>
+              <h2>Shopping Page YAMASAKI</h2>
             </div>
           </div>
         </a>
