--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <main>
       <section id="welcome-section">
         <h1>hello!</h1>
-        <p class="middle">info{<br>name: 'Ondřej',<br> surname: 'Gabrhelík',<br> nickname: 'bubliman',<br> work: 'website developer'<br>}</p>
+        <p class="middle">My name is Ondřej bubliman Gabrhelík and I'm a website developer</p>
       </section>
       <section id="skills">
         <div class="skills">
